syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.backend.service.gRpc.lib";

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello ( HelloRequest) returns (  HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
// The response message containing the greetings
message HelloReply {
  string message = 1;
}